[gd_scene load_steps=3 format=3 uid="uid://dlmq1fdopp2vy"]

[ext_resource type="Theme" uid="uid://ctpc1dbhlcp4n" path="res://themes/menu.tres" id="1_30077"]
[ext_resource type="Script" path="res://scripts/pause.gd" id="1_iqogq"]

[node name="pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_iqogq")

[node name="bg" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -74.5
offset_right = 85.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="reset_btn" type="Button" parent="menu_holder"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_30077")
theme_override_font_sizes/font_size = 64
text = "RESET PROGRESS"

[node name="resume_btn" type="Button" parent="menu_holder"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_30077")
theme_override_font_sizes/font_size = 64
text = "RESUME"

[node name="menu_btn" type="Button" parent="menu_holder"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_30077")
theme_override_font_sizes/font_size = 64
text = "MENU"

[connection signal="pressed" from="menu_holder/reset_btn" to="." method="_on_reset_btn_pressed"]
[connection signal="pressed" from="menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="menu_holder/menu_btn" to="." method="_on_menu_btn_pressed"]
